--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,14 +10,15 @@
     "@types/node": "^16.18.111",
     "@types/react": "^18.3.9",
     "@types/react-dom": "^18.3.0",
+    "framer-motion": "^11.9.0",
     "powerbi-client": "^2.23.1",
     "powerbi-client-react": "^1.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-responsive": "^10.0.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
-    "framer-motion": "^11.9.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
